--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ mccabe==0.7.0
 packaging==25.0
 platformdirs==4.4.0
 pluggy==1.6.0
+psycopg2-binary==2.9.10
 pylint==3.3.8
 pytest==8.3.3
 requests==2.32.5
